# Synapse

./: .coverage  .env.example  .eslintrc.json  .gitignore  .windsurfrules  Dockerfile  README.md  docker-compose.monitoring.yml  docker-compose.yml  gen1536.py  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  project_structure.txt  pyproject.toml  pytest.ini  requirements.txt  run_api.py  showtree.py  tatus  test_qdrant.py  test_qdrant_collection.py  tsconfig.json
.github/workflows/: tests.yml
apps/api/: pytest.ini
apps/web/: package.json
config/grafana/: grafana.ini
config/prometheus/: prometheus.yml
data/user/: profile.json
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  test_results.md
docs/agents/: README.md  (+2 more)
examples/: crawler_rag_example.py  deepseek_example.py
instructions/: Done_Yesterday.md  Project_Reorganization.md  Switch_PCs  ai_tech_stack.md  instructions.md  instruções_bolt  instruções_lovable  todolist.md
requirements/: analytics.txt  base.txt  cli.txt  dev.txt  prod.txt
scripts/: check_services.sh  lovable-build.ts  lovable-protection.ts  lovable-verify.ts  maintain.py  reorganize.ps1  run_tests.py  setup.ps1  setup.py  test_analytics.bat  test_analytics.sh  test_brave_api.py  update_docs.py  validate_docs.py
src/: __init__.py  config.py  database.py  dependencies.py  env.ts  exceptions.py  main.py  middleware.ts  run.py  schemas.py
supabase/: config.toml
terraform/: main.tf
tests/: .eslintrc.js  __init__.py  test_api.py  test_cli.py  test_config.py  test_rag.py  test_rag_system.py
(+436 files in other folders)
