[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse"
version = "0.1.0"
description = "Sistema de RAG com crawling paralelo"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "prometheus-client>=0.17.0",
    "crawl4ai>=0.1.0",
    "redis>=5.0.1",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "supabase>=2.0.0",
]

[project.scripts]
synapse = "src.cli.main:cli"

[tool.setuptools]
packages = ["src", "src.cli", "src.config", "src.chat", "src.llm"]
package-dir = {"" = "."} 